objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <label>Best Time to Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Early afternoon</fullName>
                </value>
                <value>
                    <fullName>Early morning</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Late afternoon</fullName>
                </value>
                <value>
                    <fullName>Mid-morning</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Weekend</fullName>
                </value>
                <value>
                    <fullName>Any Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Trans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyId__c</fullName>
        <externalId>true</externalId>
        <label>MyId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OHIP__c</fullName>
        <label>OHIP Card #</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All Patient records require this field</inlineHelpText>
        <label>Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programs</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Id__c</fullName>
        <description>It&apos;s unique id for each patient</description>
        <displayFormat>1-{000000000}</displayFormat>
        <label>Reg Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>British Columbia</fullName>
                </value>
                <value>
                    <fullName>Ontario GTA</fullName>
                </value>
                <value>
                    <fullName>Ontario North</fullName>
                </value>
                <value>
                    <fullName>Ontario GHS</fullName>
                </value>
                <value>
                    <fullName>Ontario SW</fullName>
                </value>
                <value>
                    <fullName>Ontario NE</fullName>
                </value>
                <value>
                    <fullName>Ontario NW</fullName>
                </value>
                <value>
                    <fullName>Ontario E</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>BC Vancouver Island</fullName>
                </value>
                <value>
                    <fullName>BC Okanagan/Interior</fullName>
                </value>
                <value>
                    <fullName>BC Vancouver Lower Mainland</fullName>
                </value>
                <value>
                    <fullName>Atlantic</fullName>
                </value>
                <value>
                    <fullName>BC Fraser Valley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF (AND(Patient__c = TRUE,  CONTAINS(CASE(Programs__r.Program__c, &quot;Forteo&quot;, &quot;Y&quot;, &quot;Ebixa&quot;, &quot;Y&quot;, &quot;N&quot;), &quot;Y&quot;)), 

IF(ISPICKVAL(Status__c, &quot;Active&quot;),&quot;Green&quot;, &quot;Yellow&quot;),

&quot;Red&quot;
)</formula>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SysCode_Id__c</fullName>
        <formula>Id</formula>
        <label>SysCode_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family Doctor</fullName>
                </value>
                <value>
                    <fullName>Insurance Rep</fullName>
                </value>
                <value>
                    <fullName>MD Specialist</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Physiotherapist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <description>Others</description>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient</fullName>
        <active>true</active>
        <description>Patient records</description>
        <label>Patient</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prescriber</fullName>
        <active>true</active>
        <label>Prescriber</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>At_least_one_Phone_number</fullName>
        <active>true</active>
        <errorConditionFormula>AND((Patient__c = TRUE)  ,  ISBLANK(HomePhone) , ISBLANK(Phone) , ISBLANK(MobilePhone))</errorConditionFormula>
        <errorMessage>Patent record should contain at least one Phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_method</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISBLANK(Email) , INCLUDES(Contact_Method__c, &quot;Email&quot;))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>If Contact Method contains Email value, then Email Address should not be null for the Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Junk_Char_In_Name</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( LastName,&quot;^[a-z  A-Z]*$&quot;)) || 
NOT(REGEX( FirstName,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
        <errorMessage>no special characters allowed in Last name OR First name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Patient_RN_Prescriber_CM</fullName>
        <active>true</active>
        <errorConditionFormula>((Patient__c  = true &amp;&amp; RN__c = false &amp;&amp;  Prescriber__c = false &amp;&amp;  Case_Managed__c = false )||
(Patient__c  = false &amp;&amp; RN__c = true &amp;&amp;  Prescriber__c = false &amp;&amp;  Case_Managed__c = false )||
(Patient__c  = false &amp;&amp; RN__c = false &amp;&amp;  Prescriber__c = true &amp;&amp;  Case_Managed__c = false )||
(Patient__c  = false &amp;&amp; RN__c = false &amp;&amp;  Prescriber__c = false &amp;&amp;  Case_Managed__c = true )) &lt;&gt; True</errorConditionFormula>
        <errorMessage>Only one Flag should be Checked in (Patient, RN, Prescriber, Case Managed)</errorMessage>
    </validationRules>
</CustomObject>